syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ShowAvatarInfo.proto";

// CmdId: 4034
// EnetChannelId: 0
// EnetIsReliable: true
message GetFriendShowAvatarInfoRsp {
	int32 retcode = 14;
	uint32 uid = 11;
	repeated ShowAvatarInfo show_avatar_info_list = 7;
}
