syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "AvatarFetterInfo.proto";
import "AvatarExcelInfo.proto";
import "PropValue.proto";
import "ShowEquip.proto";

message ShowAvatarInfo {
	uint32 avatar_id = 1;
	map<uint32, PropValue> prop_map = 2;
	repeated uint32 talent_id_list = 3;
	map<uint32, float> fight_prop_map = 4;
	uint32 skill_depot_id = 5;
	uint32 core_proud_skill_level = 6;
	repeated uint32 inherent_proud_skill_list = 7;
	map<uint32, uint32> skill_level_map = 8;
	map<uint32, uint32> proud_skill_extra_level_map = 9;
	repeated ShowEquip equip_list = 10;
	AvatarFetterInfo fetter_info = 11;
	uint32 costume_id = 12;
	AvatarExcelInfo excel_info = 13;
}
